--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint:css": "stylelint \"src/**/*.css\"",
+    "lint:html": "htmlhint \"./**/*.html\""
   },
   "dependencies": {
     "lucide-react": "^0.501.0",
@@ -20,11 +22,14 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "10.4.19",
-    "eslint": "^9.22.0",
+    "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "htmlhint": "^1.1.4",
     "postcss": "8.4.38",
+    "stylelint": "^16.18.0",
+    "stylelint-config-standard": "^38.0.0",
     "tailwindcss": "3.4.3",
     "vite": "^6.3.1"
   }
