--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "postcss": "8.4.38",
     "stylelint": "^16.18.0",
     "stylelint-config-standard": "^38.0.0",
+    "stylelint-config-tailwindcss": "^1.0.0",
     "tailwindcss": "3.4.3",
     "vite": "^6.3.1"
   }
