ci: separate HTML linting from ESLint and Stylelint
htmlhint is not a directly supported linter input for this action by `wearerequired/lint-action@v2`

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,9 +25,11 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Run linters
+      - name: Run ESLint and Stylelint
         uses: wearerequired/lint-action@v2
         with:
           eslint: true
           stylelint: true
-          htmlhint: true
+
+      - name: Run HTMLHint
+        run: pnpm lint:html
