ci: update lint workflow to separate ESLint and Stylelint runs
Separate the ESLint and Stylelint runs in the lint workflow to improve clarity and control over the linting process. This change also updates the lint-action version to v2.3.0 for ESLint and adds Prettier support.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,11 +25,14 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Run ESLint and Stylelint
-        uses: wearerequired/lint-action@v2
+      - name: Run ESLint
+        uses: wearerequired/lint-action@v2.3.0
         with:
           eslint: true
-          stylelint: true
+          prettier: true
+
+      - name: Run Stylelint
+        run: pnpm lint:css
 
       - name: Run HTMLHint
         run: pnpm lint:html
